src/objects/Seller_TAT_Breach__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Closure_Date__c</fullName>
        <label>Actual Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Closure_Date__c</fullName>
        <label>Estimated Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ideal_Closure_Date__c</fullName>
        <label>Ideal Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Breach_Date__c</fullName>
        <label>Next Breach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Seller TAT Breach</relationshipLabel>
        <relationshipName>Seller_TAT_Breach</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seller_ID_new__c</fullName>
        <formula>Opportunity__r.Seller_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TAT_Stage_Profile_ID__r.TAT_Stage_ID__r.TAT_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Breach_in_Days__c</fullName>
        <label>TAT Breach in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Profile_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TAT Stage Profile ID</label>
        <referenceTo>TAT_Stage_Profile__c</referenceTo>
        <relationshipLabel>Seller TAT Breach</relationshipLabel>
        <relationshipName>Seller_TAT_Breach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Taken_per_Stage__c</fullName>
        <label>Time Taken per Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Seller TAT Breach</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TAT_Stage_Profile_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Seller_ID_new__c</columns>
        <columns>Ideal_Closure_Date__c</columns>
        <columns>Actual_Closure_Date__c</columns>
        <columns>Next_Breach_Date__c</columns>
        <columns>Estimated_Closure_Date__c</columns>
        <columns>Time_Taken_per_Stage__c</columns>
        <columns>TAT_Breach_in_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seller TAT Breach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>